--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,14 @@
 {
   "version": "0.2.0",
-  "configurations": []
+  "configurations": [
+    {
+      "name": "day01",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/day01/main.go",
+      "cwd": "${workspaceFolder}/day01",
+      "stopOnEntry": false
+    }
+  ]
 }
