--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,15 @@
       "program": "${workspaceFolder}/day05/main.go",
       "cwd": "${workspaceFolder}/day05",
       "stopOnEntry": false
+    },
+    {
+      "name": "day06",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/day06/main.go",
+      "cwd": "${workspaceFolder}/day06",
+      "stopOnEntry": false
     }
   ]
 }
