--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,6 +63,15 @@
       "program": "${workspaceFolder}/day07/main.go",
       "cwd": "${workspaceFolder}/day07",
       "stopOnEntry": false
+    },
+    {
+      "name": "day08",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/day08/main.go",
+      "cwd": "${workspaceFolder}/day08",
+      "stopOnEntry": false
     }
   ]
 }
