--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -90,6 +90,15 @@
       "program": "${workspaceFolder}/day10/main.go",
       "cwd": "${workspaceFolder}/day10",
       "stopOnEntry": false
+    },
+    {
+      "name": "day11",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/day11/main.go",
+      "cwd": "${workspaceFolder}/day11",
+      "stopOnEntry": false
     }
   ]
 }
