--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -108,6 +108,15 @@
       "program": "${workspaceFolder}/day12/main.go",
       "cwd": "${workspaceFolder}/day12",
       "stopOnEntry": false
+    },
+    {
+      "name": "day13",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/day13/main.go",
+      "cwd": "${workspaceFolder}/day13",
+      "stopOnEntry": false
     }
   ]
 }
